--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
-_site
+.DS_store
+*.rdb
+*.rbc
+*.sassc
+.sass-cache
+capybara-*.html
+.rspec
+config/database.yml
+/.bundle
+/vendor/bundle
+/log/*
+/tmp/*
+/db/*.sqlite3
+/public/system/*
+/public/customer/*
+/coverage/
+/spec/tmp/*
+**.orig
+rerun.txt
+pickle-email-*.html/public/packs
+
+public/customer/*
+public/uploads/*
+/public/packs
+/public/packs-test
+/node_modules
